2001-06-21  Frank Warmerdam  <warmerdam@pobox.com>

	* Added core/gdal_drivertut.dox, documentation on writing drivers.

2001-06-20  Frank Warmerdam  <warmerdam@pobox.com>

	* apps/GNUmakefile: fixed some bugs in generating apps/gdal-config
	thanks to Phillip Dibner.

	* core/gdal_priv.h,gdaldefaultoverviews.cpp: GDALDefaultOverviews now
	allows setting exact name of .ovr file, and remembers name to use
	when building overviews.

	* frmts/raw/hkvdataset.cpp: reimplement overviews in TIFF file.

	* ogr/ogrsf_frmts/pg: Implement PostGIS support.

2001-06-01  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/jpg/jpgdataset.cpp: altered magic number testing to work
	with IMG_0519.JPG from eCognition folks. 

2001-05-31  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/hfa/hfaband.cpp: added uncompress support for reduce precision,
	non-run length encoded data.

	* frmts/geotiff/geotiff.cpp: Improved magic number testing.

2001-05-15  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/raw/fujibasdataset.cpp: added new Fuji BAS format.

	* frmts/raw/pauxdataset.cpp: added support for opening by selecting
	the .aux file.

2001-05-07  Frank Warmerdam  <warmerdam@pobox.com>

	* pymod/gdal.py, gdal.i: added GDALComputeRasterMinMax() bindings.

2001-05-01  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/gtiff/geotiff.cpp: added GTiffBitmapBand support.

	* frmts/jpeg/jpgdataset.cpp: added world file support.

	* frmts/gtiff/geotiff.cpp: Use GDALReadWorldFile(), support .wld
	and .tifw as well as .tfw on read.

	* core/gdal_misc.cpp: added GDALReadWorldFile()

2001-04-18  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/ogdi/ogdidataset.cpp: fixed rastersize calculation.

2001-04-17  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/ogdi/*, ogr/ogrsf_frmts/ogdi/*: Modified to utilize layer
	capabilities to get list of available layers.  Restructured OGDI
	discovery mechanisms in configure script (more like other libraries).